<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anto.yourgarage.views.ListActivity">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>