<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutFormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="220dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="530dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/mybutton"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addImage"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/mybutton"
                android:text="@string/addPhoto"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="221dp"
                android:layout_height="160dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/photoDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/about_icon" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="387dp"
                android:contentDescription="@string/ownerIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ownericon" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="207dp"
                android:contentDescription="@string/enrollmentIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/carregistrationicon" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="150dp"
                android:contentDescription="@string/receptionDateIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/receptiondateicon" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="96dp"
                android:contentDescription="@string/fuelIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/fuelicon" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="321dp"
                android:contentDescription="@string/brandIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/carbrandicon" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="265dp"
                android:contentDescription="@string/modelIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/modelicon" />

            <ToggleButton
                android:id="@+id/estadoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/togglebutton"
                android:textOff="@string/normal"
                android:textOn="@string/grave"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="33dp"
                android:text="@string/status"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="4dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fault" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/infoImage"
                android:layout_width="43dp"
                android:layout_height="38dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/infoIconDescription"
                app:layout_constraintStart_toEndOf="@+id/estadoButton"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/infobutton" />

            <Button
                android:id="@+id/deleteImage"
                android:layout_width="117dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="41dp"
                android:background="@drawable/mybutton"
                android:text="@string/deletePhoto"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/addImage" />

            <Button
                android:id="@+id/deleteCarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/mybutton"
                android:text="@string/deleteCar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveCar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receptionDate" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>