<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/dateSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="49dp"
        android:layout_height="42dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/receptionDateIconDescription"
        app:layout_constraintEnd_toStartOf="@+id/editTextReceptionDate"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/receptiondateicon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="49dp"
        android:layout_height="42dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/ownerIconDescription"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ownericon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ownerSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextReceptionDate"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="31dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/receptionDate"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="161dp"
        android:background="@drawable/mybutton"
        android:text="@string/action_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReceptionDate" />


</androidx.constraintlayout.widget.ConstraintLayout>